Fix header image not showing

--- a/global.css
+++ b/global.css
@@ -4,7 +4,7 @@
 }
 
 .header {
-	background-image: url("public/headerBg.png");
+	background-image: url("public/fejlec.png");
 	display: flex;
 	justify-content: center;
 	align-items: center;
